# ai-pysical-humonoid-book-hackathone1

./: .env.example  .gitignore  README.md  docker-compose.yml  embed_book_simple.py  embed_book_sklearn.py  output.txt  package-lock.json  recreate_collection.py  requirements-dev.txt  requirements.txt  run_rag_chatbot.py  sample_book.txt  setup.cfg  setup.py  test_backend.py  test_comprehensive.py  test_rag_chatbot.py  test_retrieval.py  test_upload_simple.py  vercel.json
.specify/memory/: constitution.md
code/: README.md  docker-compose.yml  requirements.txt  start.sh  test_api.py  test_qdrant.py
code/docker/: Dockerfile
code/module1/action_py/: package.xml  setup.py
code/module1/pub_sub_py/: package.xml  setup.py
code/module1/service_py/: package.xml  setup.py
code/module1/voice_controller/: package.xml  setup.py
code/module1/voice_controller/voice_controller/: controller_node.py
code/src/: main.py
specs/001-create-book-spec/: plan.md  spec.md  tasks.md
specs/002-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  config.py  database.py  logging_config.py  main.py
src/api/: models.py  routes.py
src/models/: __init__.py  database.py
src/services/: __init__.py  citation_validation_service.py  embedding_service.py  gemini_service.py  rag_service.py  rerank_service.py  response_generation_service.py  retrieval_service.py  vector_search_service.py
tests/unit/: test_api.py  test_main.py
website/: README.md  docusaurus.config.ts  manifest.json  package-lock.json  package.json  sidebars.ts
(+55 files in other folders)
